@@ -261,6 +261,7 @@ public class ModItems
 	public static final Item TRUFFLE_STRAWBERRY = new ImmersiFood("truffle_strawberry", 64, 0, 5, 5F, false);
 	public static final Item TRUFFLE_WHITE_BB = new ImmersiFood("truffle_white_bb", 64, 0, 5, 5F, false);
 	public static final Item TRUFFLE_WHITE_GRAPE = new ImmersiFood("truffle_white_grape", 64, 0, 5, 5F, false);
+	public static final Item PEPPERMINT_BARK = new ImmersiFood("peppermint_bark", 64, 0, 3, 2F, false);
 
 	// Decorative Wearables
 	public static final Item MASK_JASON = new FaceMasks("mask_jason", ArmorMaterialRegistry.MASK_JASON, EntityEquipmentSlot.HEAD);
