@@ -1,0 +1,3 @@
+{
+   "parent": "wbtc:block/ceiling_exit_green"
+}
